Solved CRLF problem and added new result2matrix.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,14 @@ export(SocketClass)
 export(Store)
 export(Updating)
 export(input_to_raw)
+export(result2frame)
+export(result2matrix)
+export(result2tibble)
 import(R6)
 import(RCurl)
 import(dplyr)
 import(stringr)
+import(tibble)
 import(utils)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
