--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: RBaseX
 Type: Package
 Title: 'BaseX' Client
-Version: 0.2.4
-Date: 2020-03-11
+Version: 0.3.0
+Date: 2020-04-03
 Authors@R: person("Ben","Engbers", email = "Ben.Engbers@Be-Logical.nl", role = c("aut","cre"))
 Description: 'BaseX' <http://basex.org> is a XML database engine and a compliant 'XQuery 3.1' processor with full support of 'W3C Update Facility'. This package is a full client-implementation of the client/server protocol for 'BaseX' and provides functionalities to create, manipulate and query on XML-data. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
-Imports: R6, RCurl, dplyr, openssl, stringr, magrittr, tibble
+RoxygenNote: 7.1.0
+Imports: R6, RCurl, dplyr, openssl, stringr, magrittr, tibble, data.table
 Suggests: testthat
 Author: Ben Engbers [aut, cre]
 Maintainer: Ben Engbers <Ben.Engbers@Be-Logical.nl>
