--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RBaseX
 Type: Package
 Title: 'BaseX' Client
-Version: 1.1.1
-Date: 2022-03-10
+Version: 1.1.2
+Date: 2022-04-11
 Authors@R: person("Ben","Engbers", email = "Ben.Engbers@Be-Logical.nl", role = c("aut","cre"))
 Description: 'BaseX' <https://basex.org> is a XML database engine and a compliant 'XQuery 3.1' processor with full support of 'W3C Update Facility'. This package is a full client-implementation of the client/server protocol for 'BaseX' and provides functionalities to create, manipulate and query on XML-data. 
 License: MIT + file LICENSE
@@ -13,5 +13,5 @@ Suggests: testthat, glue
 Author: Ben Engbers [aut, cre]
 Maintainer: Ben Engbers <Ben.Engbers@Be-Logical.nl>
 URL: https://github.com/BenEngbers/RBaseX
-SystemRequirements: Needs a running BaseX server instance.
+SystemRequirements: Needs a running BaseX server instance. The testuser ("Test"/"testBasex") should have admin rights.
 Repository: CRAN
